# TrafficAnal-CPP

./: .gitignore  CMakeLists.txt  Doxyfile
doc/: class.puml  puml.dox
doc/doxygen/doxygen-custom/: toggle-alternative-theme.js
inc/logger/: Logger.hpp
inc/logger/strats/: ConsoleStrategy.hpp  ErrorStrategy.hpp  FileStrategy.hpp  LogStrategy.hpp
inc/traffic_anal/: AnalyseStrategy.hpp  Analyser.hpp  RequestManager.hpp  Requests.hpp  data_structs.hpp  requests.hpp
res/: class.puml
src/: main.cpp
src/traffic_anal/: Analyser.cpp  RequestManager.cpp  Requests.cpp  requests.cpp
